--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,14 @@ authors = ["Shirou-kun <shivanshs9@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">3.9.7,<3.13"
 pdfplumber = "^0.11.4"
-pandas = "^2.2.3"
+pandas = "^2.0.3"
+# Requires fix for https://github.com/Sinaptik-AI/pandas-ai/issues/1386
+pandasai = { git = "https://github.com/shivanshs9/pandas-ai.git", branch = "support/python3.12" }
+pandasai-langchain = { git = "https://github.com/shivanshs9/pandas-ai.git", subdirectory = "extensions/llms/langchain", branch = "support/python3.12" }
 pyarrow = "^18.1.0"
+streamlit = "^1.41.1"
 
 
 [tool.poetry.group.dev.dependencies]
